==> pipipipi2002/pmb_stm32/app/src/BQ34110.c <==
#include "PMB_STM/BQ34110/BQ34110.h"

uint32_t BQ_ReadRegister(uint8_t addr, uint8_t len) {
    uint32_t returnVal = 0;

	HAL_I2C_Mem_Read(&hi2c1, BQ34110_ADDRESS, addr, 1, BQ_dataR, len, 10);

	for (int i=0; i < len; i++) {
		returnVal |= BQ_dataR[i] << (8*i);
	}
    return returnVal;
}

void BQ_WriteControl(uint8_t cntl_data) {
	BQ_dataW[0] = BQ34110_REG_CNTL;
	BQ_dataW[1] = cntl_data;
	BQ_dataW[2] = 0x00;
	HAL_I2C_Master_Transmit(&hi2c1, BQ34110_ADDRESS, BQ_dataW, 3, 10);
}

void BQ_WriteMAC(uint16_t cntl_data) {
	BQ_dataW[0] = (uint8_t)BQ34110_REG_MAC;
	BQ_dataW[1] = (uint8_t)(cntl_data & 0xFF); 		// LSB
	BQ_dataW[2] = (uint8_t)(cntl_data >> 8); 		// MSB
	HAL_I2C_Master_Transmit(&hi2c1, BQ34110_ADDRESS, BQ_dataW, 3, HAL_MAX_DELAY);
}

uint32_t BQ_ReadFlash(uint16_t addr, uint8_t bytes) {
	uint16_t flashDataR = 0x0000;
	uint16_t MAC = 0x0000;

	do {
		BQ_WriteMAC(addr);
		HAL_Delay(50);

		// Check if MAC contains the correct subcommand
		HAL_I2C_Mem_Read(&hi2c1, BQ34110_ADDRESS, 0x3E, 1, BQ_dataR, 1, 10);
		MAC = BQ_dataR[0];
		HAL_I2C_Mem_Read(&hi2c1, BQ34110_ADDRESS, 0x3F, 1, BQ_dataR, 1, 10);
		MAC |= BQ_dataR[0] << 8;
		HAL_Delay(500);
	}  while (MAC != addr);

	HAL_I2C_Mem_Read(&hi2c1, BQ34110_ADDRESS, BQ34110_REG_MAC_DATA, 1, BQ_dataR, bytes, 10);
	for (int i = 0; i < bytes; i++) {
		flashDataR |= BQ_dataR[i] << (8*(bytes-i-1)); // Bytes received in Little Endian
	}
	BQ_ReadRegister(BQ34110_REG_MAC_DATA_SUM, 1);
	BQ_ReadRegister(BQ34110_REG_MAC_DATA_LEN, 1);

	return flashDataR;
}

void BQ_WriteFlash(uint16_t addr, uint8_t bytes, uint16_t flashDataW) {
	BQ_WriteMAC(addr);
	HAL_Delay(50);

	// Sent in big endian
	BQ_dataW[0] = BQ34110_REG_MAC_DATA;
	if (bytes == 2) {
		BQ_dataW[1] = (uint8_t)(flashDataW >> 8);
		BQ_dataW[2] = (uint8_t)(flashDataW & 0xFF);
	}
	else if (bytes == 1) {
		BQ_dataW[1] = (uint8_t)(flashDataW & 0xFF);
	}
	HAL_I2C_Master_Transmit(&hi2c1, BQ34110_ADDRESS, BQ_dataW, 1 + bytes, HAL_MAX_DELAY);
	HAL_Delay(300);

	BQ_CheckSum(addr, bytes, flashDataW);

	BQ_dataW[0] = BQ34110_REG_MAC_DATA_LEN;
	BQ_dataW[1] = 0x04 + bytes;
	HAL_I2C_Master_Transmit(&hi2c1, BQ34110_ADDRESS, BQ_dataW, 2, 10);
	HAL_Delay(30);
}

void BQ_CheckSum(uint16_t addr, uint8_t bytes, uint16_t flashDataW) {
    uint16_t summ = 0;
    summ = ~ ( (uint8_t)(addr >> 8) + (uint8_t)(addr & 0xFF) +
    		   (uint8_t)(flashDataW >> 8) + (uint8_t)(flashDataW & 0xFF) );
    BQ_dataW[0] = BQ34110_REG_MAC_DATA_SUM;
    BQ_dataW[1] = summ;
	HAL_I2C_Master_Transmit(&hi2c1, BQ34110_ADDRESS, BQ_dataW, 2, 10);
	HAL_Delay(1000); // bq needs time here!!!
}

void BQ_ExitCalibration() {
	uint32_t buffer;
	do {
		BQ_WriteControl(BQ34110_CNTL_CAL_TOGGLE);
		HAL_Delay(300);

		// buffer = BQ_ReadMAC(BQ34110_CNTL_MANUF_STATUS, 2);
		
		/* This is an alternative where writing to 0x00 or CNTL, has the 
		 same effect as writing to MAC 0x3E.*/
		BQ_dataW[0] = 0x00;
		BQ_dataW[1] = BQ34110_CNTL_MANUF_STATUS;
		BQ_dataW[2] = 0x00;
		HAL_I2C_Master_Transmit(&hi2c1, BQ34110_ADDRESS, BQ_dataW, 3, 10);
		HAL_Delay(300);

		HAL_I2C_Mem_Read(&hi2c1, BQ34110_ADDRESS, BQ34110_REG_MAC_DATA, 1, BQ_dataR, 2, HAL_MAX_DELAY);
		buffer = BQ_dataR[0] | (BQ_dataR[1] << 8);
	} while (((buffer >> 8) & (1 << 7))); // Check for CAL_EN bit to be cleared
}

void BQ_Calibrate_CCOffset_BoardOffset() {
	BQ_EnterCalibration();
	
	uint32_t buffer;

	do {
		BQ_WriteControl(BQ34110_CNTL_BOARD_OFFSET);
		HAL_Delay(1000);
		
		buffer = BQ_ReadControl(BQ34110_CNTL_CONTROL_STATUS);
	} while ( !(buffer & (1 << 5)) || !(buffer & (1 << 4)) ); // Bit 5: CCA; Bit 4: BCA

	do {
		HAL_I2C_Mem_Read(&hi2c1, BQ34110_ADDRESS, 0x00, 1, BQ_dataR, 2, HAL_MAX_DELAY);
		buffer = BQ_dataR[0] | (BQ_dataR[1] << 8);
		HAL_Delay(1000);
	} while ( (buffer & (1 << 5)) || (buffer & (1 << 4)) );
	
	// BQ_WriteControl(BQ34110_CNTL_CC_OFFSET_SAVE);

	BQ_ExitCalibration();
}

void BQ_CalibrateVoltage(uint16_t vApplied) {
	printf("Initialising Voltage Calibration.\r\n");	

	BQ_CalibrateVoltageDivider(vApplied);
	BQ_CalibrateVoltagePackOffset(vApplied);
	
	printf("Completed Voltage Calibration.\r\n");	
}

void BQ_WriteCCFlash(uint16_t addr, int rawData[]) {
	BQ_WriteMAC(addr);
	HAL_Delay(50);

	// Sent in big endian
	BQ_dataW[0] = BQ34110_REG_MAC_DATA;
	BQ_dataW[1] = (uint8_t)(rawData[0]);
	BQ_dataW[2] = (uint8_t)(rawData[1]);
	BQ_dataW[3] = (uint8_t)(rawData[2]);
	BQ_dataW[4] = (uint8_t)(rawData[3]);
	HAL_I2C_Master_Transmit(&hi2c1, BQ34110_ADDRESS, BQ_dataW, 5, HAL_MAX_DELAY);
	HAL_Delay(300);

	// Checksum
    uint16_t summ = 0;
    summ = ~ ( (uint8_t)(addr >> 8) + (uint8_t)(addr & 0xFF) +
    		   (uint8_t)(rawData[0]) + (uint8_t)(rawData[1]) +
			   (uint8_t)(rawData[2]) + (uint8_t)(rawData[3]) );
    BQ_dataW[0] = BQ34110_REG_MAC_DATA_SUM;
    BQ_dataW[1] = summ;
	HAL_I2C_Master_Transmit(&hi2c1, BQ34110_ADDRESS, BQ_dataW, 2, 10);
	HAL_Delay(500); //bq needs time here!!!

	BQ_dataW[0] = BQ34110_REG_MAC_DATA_LEN;
	BQ_dataW[1] = 0x04 + 0x04;
	HAL_I2C_Master_Transmit(&hi2c1, BQ34110_ADDRESS, BQ_dataW, 2, 10);
	HAL_Delay(30);
}

void BQ_RestoreCCSettings() {
	int ccGain_df[4], ccDelta_df[4];
	uint32_t data1, data2;
	for (int i = 0; i<4; i++) {
		ccGain_df[i] = 0;
		ccDelta_df[i] = 0;
	}

	floatConversion(0.47095, ccGain_df);
	floatConversion(5.677446*pow(10,5), ccDelta_df);

	BQ_EnterCalibration();

	do {
		BQ_WriteCCFlash(BQ34110_DF_CC_GAIN, ccGain_df);
		data1 = BQ_ReadFlash(BQ34110_DF_CC_GAIN, 2);
		data2 = BQ_ReadFlash(BQ34110_DF_CC_GAIN + 2, 2);
	} while (data1 != (ccGain_df[0] << 8 | ccGain_df[1]) &&
			 data2 != (ccGain_df[2] << 8 | ccGain_df[3]));

	BQ_WriteCCFlash(BQ34110_DF_CC_DELTA, ccDelta_df);

	BQ_ExitCalibration();

	HAL_Delay(300);
}

void BQ_ReadKeys() {
	BQ_WriteControl(BQ34110_CNTL_SECURITY_KEYS);
	HAL_Delay(10);

	HAL_I2C_Mem_Read(&hi2c1, BQ34110_ADDRESS, BQ34110_REG_MAC_DATA, 1, keys, 8, 10);
}

void BQ_Unseal() {
	uint8_t status;

	status = BQ_ReadRegister(BQ34110_REG_OP_STATUS, 1) & 0x06;
	if (status == 0x04) printf("Unsealed Initial Status");
	else if (status == 0x06) printf("Sealed Initial Status");
	else if (status == 0x02) printf("Full Access Initial Status");
	else if (status == 0x00) printf("Invalid Initial Status");

	BQ_ReadKeys();

	BQ_dataW[0] = BQ34110_REG_CNTL;
	BQ_dataW[1] = keys[0];
	BQ_dataW[2] = keys[1];
	HAL_I2C_Master_Transmit(&hi2c1, BQ34110_ADDRESS, BQ_dataW, 3, 10);
	HAL_Delay(10);

	BQ_dataW[0] = BQ34110_REG_CNTL;
	BQ_dataW[1] = keys[2];
	BQ_dataW[2] = keys[3];
	HAL_I2C_Master_Transmit(&hi2c1, BQ34110_ADDRESS, BQ_dataW, 3, 10);
	HAL_Delay(10);

	status = BQ_ReadRegister(BQ34110_REG_OP_STATUS, 1) & 0x06;
	if (status == 0x04) printf("Unsealed Status");
	else if (status == 0x06) printf("Sealed Status, Failed to Unseal");
	else if (status == 0x02) printf("Full Access Status, No Need to Unseal");
	else if (status == 0x00) printf("Invalid Status, No State was Loaded");
}
