==> BumblebeeAS/hardware/AUV-4/PMB/PMB_4-0_atmega/Libraries/BQ34110.cpp <==
#include "BQ34110.h"
#include <Arduino.h>
#include <Wire.h>
#include "defines.h"

uint32_t BQ_ReadRegister(uint8_t add, uint8_t len){
    uint32_t returnVal = 0;
    
    Wire.beginTransmission(BQ34110_ADDRESS);
    Wire.write(add);
    Wire.endTransmission();
    Wire.requestFrom(BQ34110_ADDRESS, (int)(len));

    for(int i=0;i<len;i++){
        returnVal = returnVal  | Wire.read() << (8*i);
    }
       //need to add timeout?

    return returnVal;
}

void BQ_WriteControl(uint8_t cntl_data){
  BQ_dataW[0] = BQ34110_REG_CNTL;
	BQ_dataW[1] = cntl_data;
	BQ_dataW[2] = 0x00;
    Wire.beginTransmission(BQ34110_ADDRESS);
    Wire.write(BQ_dataW, 3);
    Wire.endTransmission();
}

void BQ_WriteMAC(uint16_t cntl_data){
  BQ_dataW[0] = (uint8_t)BQ34110_REG_MAC;
	BQ_dataW[1] = (uint8_t)(cntl_data & 0xFF);
	BQ_dataW[2] = (uint8_t)(cntl_data >> 8);
   Wire.beginTransmission(BQ34110_ADDRESS);
   Wire.write(BQ_dataW, 3);
   Wire.endTransmission();
}

uint32_t BQ_ReadFlash(uint16_t addr, uint8_t bytes){
    uint16_t flashDataR = 0x0000;
    uint16_t MAC = 0x0000;

    do{
        BQ_WriteMAC(addr);
        delay(50);
        // Check if MAC contains the correct subcommand
        Wire.beginTransmission(BQ34110_ADDRESS);
        Wire.write(0x3E);
        Wire.endTransmission();
//        Wire.beginTransmission(BQ34110_ADDRESS+1);
        Wire.requestFrom(BQ34110_ADDRESS, 1);
        MAC = Wire.read();
//        Wire.endTransmission();
     
        Wire.beginTransmission(BQ34110_ADDRESS);
        Wire.write(0x3F);
        Wire.endTransmission();
       // Wire.beginTransmission(BQ34110_ADDRESS+1);
        Wire.requestFrom(BQ34110_ADDRESS, 1);
        MAC = MAC | Wire.read()<< 8;
        Serial.println(MAC , HEX);
        //Wire.endTransmission();
        delay(500);
    }while (MAC != addr);

    Wire.beginTransmission(BQ34110_ADDRESS);
    Wire.write(BQ34110_REG_MAC_DATA);
    Wire.endTransmission();
    Wire.requestFrom(BQ34110_ADDRESS, (int)(bytes));
    for(int i=0;i<bytes;i++){
        flashDataR = flashDataR << 8 | Wire.read();  // Bytes received in Little Endian
    }
    
    BQ_ReadRegister(BQ34110_REG_MAC_DATA_SUM, 1);
	  BQ_ReadRegister(BQ34110_REG_MAC_DATA_LEN, 1);

    return flashDataR;
}

void BQ_WriteFlash(uint16_t addr, uint8_t bytes, uint16_t flashDataW){
	// Send DF address in Little Endian format
    uint16_t MAC = 0x0000;

	uint16_t dataCheck = 0x0000;
	uint16_t dataWritten;
    if (bytes==1){
        dataWritten = (uint8_t)(flashDataW & 0xFF);
    }
	else if (bytes==2) {
        dataWritten = flashDataW;
    }
	uint16_t dataFlashAddr = addr;

	BQ_WriteMAC(addr);
	delay(50);

	// Sent in big endian
    Wire.beginTransmission(BQ34110_ADDRESS);
    Wire.write(BQ34110_REG_MAC_DATA);

	if (bytes == 2) {
        Wire.write((uint8_t)(flashDataW >> 8));
        Wire.write((uint8_t)(flashDataW & 0xFF));
	}
	else if (bytes == 1) {
        Wire.write((uint8_t)(flashDataW & 0xFF));
	}
    Wire.endTransmission();
    delay(300);

    BQ_CheckSum(addr, bytes, flashDataW);
    BQ_dataW[0] = BQ34110_REG_MAC_DATA_LEN;
	BQ_dataW[1] = 0x04 + bytes;

    Wire.beginTransmission(BQ34110_ADDRESS);
    Wire.write(BQ_dataW,2);
    Wire.endTransmission();
    delay(30);
}

void BQ_WriteCCFlash(uint16_t addr, int rawData[]){
	// Send DF address in Little Endian format
	uint16_t MAC = 0x0000;

	uint16_t dataCheck = 0x0000;
	uint16_t dataWritten;

	BQ_WriteMAC(addr);
	delay(50);

	// Sent in big endian   
  BQ_dataW[0] = BQ34110_REG_MAC_DATA;
	BQ_dataW[1] = (uint8_t)(rawData[0]);
	BQ_dataW[2] = (uint8_t)(rawData[1]);
	BQ_dataW[3] = (uint8_t)(rawData[2]);
	BQ_dataW[4] = (uint8_t)(rawData[3]);
    Wire.beginTransmission(BQ34110_ADDRESS);
    Wire.write(BQ_dataW,5);
    Wire.endTransmission();
    delay(300);

    uint16_t summ = 0;
    summ = ~ ( (uint8_t)(addr >> 8) + (uint8_t)(addr & 0xFF) +
    		   (uint8_t)(rawData[0]) + (uint8_t)(rawData[1]) +
			   (uint8_t)(rawData[2]) + (uint8_t)(rawData[3]) );
    BQ_dataW[0] = BQ34110_REG_MAC_DATA_SUM;
    BQ_dataW[1] = summ;
    Wire.beginTransmission(BQ34110_ADDRESS);
    Wire.write(BQ_dataW,2);
    Wire.endTransmission();
    delay(500);

	BQ_dataW[0] = BQ34110_REG_MAC_DATA_LEN;
	BQ_dataW[1] = 0x04 + 0x04;
    Wire.beginTransmission(BQ34110_ADDRESS);
    Wire.write(BQ_dataW,2);
    Wire.endTransmission();
    delay(30);
}

void BQ_CheckSum(uint16_t addr, uint8_t bytes, uint16_t flashDataW) {
    uint16_t summ = 0;
    summ = ~ ( (uint8_t)(addr >> 8) + (uint8_t)(addr & 0xFF) +
    		   (uint8_t)(flashDataW >> 8) + (uint8_t)(flashDataW & 0xFF) );
    BQ_dataW[0] = BQ34110_REG_MAC_DATA_SUM;
    BQ_dataW[1] = summ;
    Wire.beginTransmission(BQ34110_ADDRESS);
    Wire.write(BQ_dataW,2);
    Wire.endTransmission();
    delay(1000);
}

void BQ_CalibrateVoltage(uint16_t vApplied) {
	uint16_t wait = 200;
	uint8_t loopCount = 0;
	uint8_t samplesToAvg = 50;
	uint32_t rawDataSum = 0;
	double avgRawVoltage = 0;
	uint32_t data;

	uint16_t counterNow, counterPrev;
	counterNow = 0x79;

	// Obtain Raw Calibration Data
	BQ_EnterCalibration();

	while (loopCount < samplesToAvg) {
		delay(wait);
		rawDataSum += BQ_GetVoltage();
		loopCount++;
	}

	BQ_ExitCalibration();
	avgRawVoltage = rawDataSum/samplesToAvg;
	// ----------------------------

//	Round new_divider as needed to an unsigned 16- bit value.
//	This value cannot exceed 65535.
	uint32_t curr_divider = BQ_ReadFlash(BQ34110_DF_VOLTAGE_DIVIDER, 2);
	uint16_t new_divider = (uint16_t)(vApplied * curr_divider / avgRawVoltage);
  Serial.print("divider:");
  Serial.println(new_divider);
  Serial.print("avgRawVoltage: ");
  Serial.println(avgRawVoltage);

	//	int vOffset = (uint8_t)(vApplied - avgRawVoltage);
	int vOffset;
	if (vApplied - avgRawVoltage > 127) vOffset = 127;
	else if (vApplied - avgRawVoltage < -128) vOffset = -128;
	else vOffset = (vApplied - avgRawVoltage);

	do {
		BQ_WriteFlash(BQ34110_DF_VOLTAGE_DIVIDER, 0x02, new_divider);
		data = BQ_ReadFlash(BQ34110_DF_VOLTAGE_DIVIDER, 2);
	} while (data != new_divider);

	BQ_WriteMAC(0x400F);
	delay(50);

	// Sent in big endian
	BQ_dataW[0] = BQ34110_REG_MAC_DATA;
	BQ_dataW[1] = vOffset;
    Wire.beginTransmission(BQ34110_ADDRESS);
    Wire.write(BQ_dataW,2);
    Wire.endTransmission();
    delay(300);

    BQ_CheckSum(0x400F, 1, vOffset);

	BQ_dataW[0] = BQ34110_REG_MAC_DATA_LEN;
	BQ_dataW[1] = 0x05;
    Wire.beginTransmission(BQ34110_ADDRESS);
    Wire.write(BQ_dataW,2);
    Wire.endTransmission();
    delay(30);
}

void BQ_RestoreCCSettings() {
	int ccGain_df[4], ccDelta_df[4];
	uint32_t data1, data2;
	for (int i = 0; i<4; i++) {
		ccGain_df[i] = 0;
		ccDelta_df[i] = 0;
	}

	floatConversion(4.7095, ccGain_df);
	floatConversion(5.677446*pow(10,5), ccDelta_df);

	BQ_EnterCalibration();

	do {
		BQ_WriteCCFlash(BQ34110_DF_CC_GAIN, ccGain_df);
   Serial.print("ccGain_df: ");
   Serial.println((uint32_t)(ccGain_df[0] << 8 | ccGain_df[1]));
   Serial.println((uint32_t)(ccGain_df[2] << 8 | ccGain_df[3]));
   
		data1 = BQ_ReadFlash(BQ34110_DF_CC_GAIN, 2);
		data2 = BQ_ReadFlash(BQ34110_DF_CC_GAIN + 2, 2);
	} while (data1 != (ccGain_df[0] << 8 | ccGain_df[1]) &&
			 data2 != (ccGain_df[2] << 8 | ccGain_df[3]));

	BQ_WriteCCFlash(BQ34110_DF_CC_DELTA, ccDelta_df);

	BQ_ExitCalibration();

	delay(300);
}

void BQ_ExitCalibration() {
	uint32_t buffer;
	do {
		BQ_WriteControl(BQ34110_CNTL_CAL_TOGGLE);
		delay(300);
		
		BQ_dataW[0] = 0x00;
		BQ_dataW[1] = 0x57;
		BQ_dataW[2] = 0x00;
        Wire.beginTransmission(BQ34110_ADDRESS);
        Wire.write(BQ_dataW,3);
        Wire.endTransmission();

        delay(300);

        Wire.beginTransmission(BQ34110_ADDRESS);
        Wire.write(0x40);
        Wire.endTransmission();
        Wire.requestFrom(BQ34110_ADDRESS, 2);
        buffer = Wire.read(); 
        buffer = buffer | Wire.read() << 8 ;
        //		buffer = BQ_ReadMAC(BQ34110_CNTL_MANUF_STATUS, 2);
	} while ( ((buffer >> 8) & (1 << 7)));
	
	if ((buffer >> 8) & (1 << 7)) {}
	else {}
}

void BQ_Calibrate_CCOffset_BoardOffset() {
	BQ_EnterCalibration();
	
	uint32_t buffer;

	do {
		BQ_WriteControl(BQ34110_CNTL_BOARD_OFFSET);
		delay(10);
		
		buffer = BQ_ReadControl(BQ34110_CNTL_CONTROL_STATUS);
	} while ( !(buffer & (1 << 5)) || !(buffer & (1 << 4)) );

	do {
        Wire.beginTransmission(BQ34110_ADDRESS);
        Wire.write(0x00);
        Wire.endTransmission();
        Wire.requestFrom(BQ34110_ADDRESS, 2);
        buffer = Wire.read(); 
        buffer = buffer | Wire.read() << 8 ;
        delay(1000);

    }while ( (buffer & (1 << 5)) || (buffer & (1 << 4)) );

    BQ_WriteControl(BQ34110_CNTL_CC_OFFSET_SAVE);

	BQ_ExitCalibration();
}

void BQ_ReadKeys() {
	BQ_WriteControl(BQ34110_CNTL_SECURITY_KEYS);
	delay(10);

    Wire.beginTransmission(BQ34110_ADDRESS);
    Wire.write(BQ34110_REG_MAC_DATA);
    Wire.endTransmission();
    Wire.requestFrom(BQ34110_ADDRESS+1, 8);
	for (int i = 0; i < 8; i++)
	{
		keys[i] = Wire.read();
	}
    delay(1000);

}

void BQ_Unseal() {
	uint8_t status;

	status = BQ_ReadRegister(BQ34110_REG_OP_STATUS, 1) & 0x06;
//	if (status == 0x04) printf("Unsealed Initial Status");
//	else if (status == 0x06) printf("Sealed Initial Status");
//	else if (status == 0x02) printf("Full Access Initial Status");
//	else if (status == 0x00) printf("Invalid Initial Status");

	BQ_ReadKeys();

	BQ_dataW[0] = BQ34110_REG_CNTL;
	BQ_dataW[1] = keys[0];
	BQ_dataW[2] = keys[1];
    Wire.beginTransmission(BQ34110_ADDRESS);
    Wire.write(BQ_dataW,3);
    Wire.endTransmission();
    delay(10);

    BQ_dataW[0] = BQ34110_REG_CNTL;
	BQ_dataW[1] = keys[2];
	BQ_dataW[2] = keys[3];
    Wire.beginTransmission(BQ34110_ADDRESS);
    Wire.write(BQ_dataW,3);
    Wire.endTransmission();
    delay(10);

    status = BQ_ReadRegister(BQ34110_REG_OP_STATUS, 1) & 0x06;
//	if (status == 0x04) printf("Unsealed Status");
//	else if (status == 0x06) printf("Sealed Status, Failed to Unseal");
//	else if (status == 0x02) printf("Full Access Status, No Need to Unseal");
//	else if (status == 0x00) printf("Invalid Status, No State was Loaded");
}
